# api-gestor-asistencias

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  init_admin.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test-requirements.txt
.github/workflows/: ci.yml  linters.yml  tests.yml
api/: asistencia.py  asistencias.py  clase.py  clases.py  usuario.py  usuarios.py
app/: init_admin.py  main.py
app/api/: asistencias.py  clases.py  estudiantes.py  profesores.py  usuarios.py
app/core/: config.py
app/database/: connection.py
app/models/: asistencia.py  asistencias.py  clase.py  clases.py  estudiante.py  profesor.py  usuarios.py
app/schemas/: asistencia.py  clase.py  clases.py  estudiante.py  profesor.py  usuarios.py
app/services/: asistencia_service.py  clase_service.py  estudiante_service.py  profesor_service.py  usuario_services.py
app/templates/: asistencias.html  clases.html  crear_asistencia.html  crear_clase.html  crear_usuario.html  header.html  index.html  usuarios.html
core/: config.py
database/: connection.py  zone_horary.py
models/: Asistencia.py  Clase.py  Enum.py  Relation.py  Usuario.py  asistencias.py  clases.py  usuarios.py
schemas/: asistencia.py  asistencias.py  clase.py  clases.py  usuario.py
services/: asistencia_service.py  clase_service.py  usuario_services.py
tests/: conftest.py  test_api_endpoints.py
tests/api-e2e/: test_asistencias_api.py  test_clases_api.py  test_estudiantes_api.py  test_profesores_api.py
tests/integracion/: test_asistencias_integration.py  test_clases_integration.py  (+2 more)
(+7 files in other folders)
